--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -15,11 +15,13 @@ django-extensions==3.2.3
 djangorestframework==3.15.1
 exceptiongroup==1.2.1
 executing==2.0.1
+gunicorn==22.0.0
 idna==3.7
 ipython==8.18.1
 jedi==0.19.1
 matplotlib-inline==0.1.7
 oauthlib==3.2.2
+packaging==24.0
 parso==0.8.4
 prompt-toolkit==3.0.43
 pure-eval==0.2.2
