--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,12 +1,15 @@
 asgiref==3.8.1
 asttokens==2.4.1
+Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 cryptography==42.0.7
 decorator==5.1.1
 defusedxml==0.7.1
+dj-database-url==2.1.0
 dj-rest-auth==6.0.0
 Django==4.2.13
 django-allauth==0.61.1
@@ -16,6 +19,7 @@ djangorestframework==3.15.1
 exceptiongroup==1.2.1
 executing==2.0.1
 gunicorn==22.0.0
+h11==0.14.0
 idna==3.7
 ipython==8.18.1
 jedi==0.19.1
@@ -24,6 +28,7 @@ oauthlib==3.2.2
 packaging==24.0
 parso==0.8.4
 prompt-toolkit==3.0.43
+psycopg2-binary==2.9.9
 pure-eval==0.2.2
 pycparser==2.22
 Pygments==2.18.0
@@ -38,4 +43,6 @@ traitlets==5.14.3
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+uvicorn==0.29.0
 wcwidth==0.2.13
+whitenoise==6.6.0
